# Detray library, part of the ACTS project (R&D line)
#
# (c) 2026 CERN for the benefit of the ACTS project
#
# Mozilla Public License Version 2.0

message(STATUS "Building 'detray::python' bindings")

# TODO: Remove once implemented
message(SEND_ERROR "Detray python bindings are not yet implemented!")

# Add the different modules
add_subdirectory(core)
